# ParDeTria

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  README.md  backtrace  issue
cmake/: FindCairomm.cmake  FindEJDB.cmake  FindFreetype.cmake  FindLibKDTree++.cmake  FindTBB.cmake  FindVTune.cmake
data/: cgal.csv  fortune.csv  root.csv  triangleDAC.csv  triangleFortune.csv  triangleInc.csv
include/: CGALTriangulator.h  CGAL_Interface.h  DCTriangulator.h  Geometry.h  LoadBalancedDCTriangulator.h  LoadBalancedDCTriangulator.tpp  Painter.h  Painter_impl.hxx  Partitioner.h  SpatialSort.h  Triangulator.h
include/datastructures/: AABBTree.h  Bit_Set.hxx  BlockedArray.hxx  BlockedArray2.hxx  Growing_LP.hxx  IndexedVector.hxx  LP_Map.hxx  LP_MultiMap.hxx  LP_Set.hxx  VectorAdapter.hxx  VectorAdapter2.hxx
include/load_balancing/: AccurateGridIntersectionChecker.h  BoundsChecker.h  BoundsIntersectionChecker.h  BoxUtils.h  CommandLineInterface.h  Experiment.h  FlatPartitioner.h  Grid.h  GridIntersectionChecker.h  HyperplaneIntersectionChecker.h  IntersectionChecker.h  MaliciousBubbleGenerator.h  OldPartitionerPartitioner.h  PartitionTree.h  PartitionTreeDump.h  PartitionTreePainter.h  Partitioner.h  PatchBubbleGenerator.h  SimplePartitioner.h  UnboundBubbleGenerator.h  VectorOperations.h  dIndex.h  dumpPartitionTree.h  kWaySplitter.h
include/load_balancing/monitors/: ComprehensiveMonitor.h  DrawingMonitor.h  Monitor.h  SampleDrawingMonitor.h  TimingMonitor.h  UnpluggedMonitor.h
include/load_balancing/sample_partitioner/: BinaryBoxEstimatingSamplePartitioner.h  BoundsDistancePointAssigningSamplePartitioner.h  CenterDistancePointAssigningSamplePartitioner.h  HyperplaneBipartitioner.h  NearestSamplePointAssigningSampleBipartitioner.h  NearestSamplePointAssigningSamplePartitioner.h  PointAssigningSamplePartitioner.h  SampleBoxPartitioner.h  SamplePartitioner.h  Sampler.h  steps.h
include/mods/: Delaunay_triangulation_3.h  Indexed_Triangulation_data_structure_2.h  Indexed_Triangulation_data_structure_3.h  Multiscale_sort.h  parallel_do.h
include/utils/: ASSERT.h  BlockedArray.hxx  BlockedVector.hxx  CSV.h  DBConnection.h  Generator.h  IndexHandler.h  IndexedVector.hxx  LP_Map.hxx  LP_MultiMap.hxx  LP_Set.hxx  Logger.h  MakeIds.h  Misc.h  Predicates.h  ProgressDisplay.h  RSS.h  Random.h  Serialization.hxx  StaticSort.h  StringUtils.h  System.h  TBB_Containers.h  TaskTimer.h  Timings.h  VTuneAdapter.h  VectorAdapter.hxx  ccolor.h  version.h
lib/fortune/: test  voronoi_main.cpp
lib/triangle/: makefile  tricall  tricall.c
plot/: plot.py  plotComparison.py  plotDAC.py  plotDS.py  plotEdgeStudy.py  plotRoot.py  plotWhereUsedStudy.py
plot/DBPlotter/: db_helpers.py  plotDatabase.py  plot_helpers.py
res/: circumcenter_2d.wxm  circumcenter_3d.wxm
scripts/: suite.sh
src/: .ycm_extra_conf.py  Benchmark.cpp  CGALTriangulator.cpp  CGAL_Interface.cpp  CGAL_Interface.h  CGAL_Interface_2.cxx  CGAL_Interface_3.cxx  CMakeLists.txt  DAC_Test.cpp  DCTriangulator.cpp  Delaunay.cpp  DelaunayRoot.cpp  EdgeStudy.cpp  Geometry.cpp  Geometry.h  IdVector.hxx  IndexedVector.hxx  Logger.cpp  Logger.h  Painter.cpp  Painter.h  Painter_2.cxx  Painter_3.cxx  Painter_impl.hxx  Partitioner.cpp  Partitioner.h  RSS.c  Random.h  StringUtils.cxx  Timings.cpp  Timings.h  Triangulator.cpp  Triangulator.h  WhereUsedStudy.cpp
src/datastructures/: CMakeLists.txt  Datastructures.cpp
src/exe/: Benchmark.cpp  Benchmark.cpp.orig  BenchmarkDS.cpp  CMakeLists.txt  DAC_Test.cpp  DAC_Test.cpp.orig  DS_Studies.cpp  EdgeStudy.cpp  GetRun.cpp  LB_Experiments.cpp  LB_Painting.cpp  LB_PointDump.cpp  LoadBalancing.cpp  SamplePartitionerTest.cpp  Studies.cpp  WhereUsedStudy.cpp  runExperiments.sh
src/lib/: CGALTriangulator.cpp  CMakeLists.txt  DCTriangulator.cpp  DCTriangulator.cpp.orig  Geometry.cpp  LoadBalancedDCTriangulator.cpp  Painter.cpp  Painter_2.cxx  Partitioner.cpp  SpatialSort.cpp  Triangulator.cpp
src/lib/delaunay/: CMakeLists.txt  makefile
src/lib/fortune/: CMakeLists.txt  VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h  makefile
src/lib/triangle/: CMakeLists.txt  makefile  triangle.h  tricall
src/test/: CMakeLists.txt  GridTest.cpp  TestGeometry3D.cpp
src/utils/: ArchiveConverter.cpp  CMakeLists.txt  DBConnection.cpp  IndexedVector.hxx  Logger.cpp  Logger.h  Predicates.cpp  ProgressDisplay.h  Random.h  Serialization.hxx  SpinMutex.h  StringUtils.cxx  System.c  System.cpp  TBB_Containers.h  Timings.cpp  VTU_Show.cpp  VTuneAdapter.cpp  VectorAdapter.hxx  ccolor.cpp  version.cpp.in
tests/: CMakeLists.txt  TestBlockedVector.cpp  TestDatastructures.cpp  TestExperimentRun.cpp  TestGeometry2D.cpp  TestGeometry3D.cpp  TestGrid.cpp  TestLP_Set.cpp
